@@ -2,7 +2,7 @@
 # Kernel/System/TemplateGenerator.pm - generate salutations, signatures and responses
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: TemplateGenerator.pm,v 1.29 2009/08/10 01:09:14 martin Exp $
+# $Id: TemplateGenerator.pm,v 1.30 2009/08/17 12:26:58 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -22,7 +22,7 @@ use Kernel::System::Notification;
 use Kernel::System::AutoResponse;
 
 use vars qw(@ISA $VERSION);
-$VERSION = qw($Revision: 1.29 $) [1];
+$VERSION = qw($Revision: 1.30 $) [1];
 
 =head1 NAME
 
@@ -376,7 +376,7 @@ sub Response {
     # replace place holder stuff
     my $ResponseText = $Self->_Replace(
         RichText => $Self->{RichText},
-        Text     => $Response{Response} || '-',
+        Text     => $Response{Response} || '',
         TicketID => $Param{TicketID},
         Data     => $Param{Data},
         UserID   => $Param{UserID},
@@ -1220,6 +1220,6 @@ did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
 
 =head1 VERSION
 
-$Revision: 1.29 $ $Date: 2009/08/10 01:09:14 $
+$Revision: 1.30 $ $Date: 2009/08/17 12:26:58 $
 
 =cut
